[package]
name = "girlboss"
version = "0.1.0"
authors = ["Jasmine Tai <jtai@jtai.ca>"]
edition = "2021"
rust-version = "1.70.0"
description = "Simple async job manager with progress tracking"
readme = "README.md"
repository = "https://github.com/j-tai/girlboss"
license = "MIT"
keywords = ["job-manager", "task-manager", "tokio"]
categories = ["asynchronous", "concurrency", "web-programming"]

[dependencies]
arc-swap = "1.7.1"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["rt", "sync"] }

[dev-dependencies]
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "time"] }
