[package]
name = "girlboss"
version = "0.2.0"
authors = ["Jasmine Tai <jtai@jtai.ca>"]
edition = "2021"
rust-version = "1.80.0"
description = "Simple async job manager with progress tracking"
documentation = "https://docs.rs/girlboss/latest/girlboss/"
readme = "README.md"
homepage = "https://github.com/j-tai/girlboss"
repository = "https://github.com/j-tai/girlboss"
license = "MIT"
keywords = ["job-manager", "task-manager", "tokio"]
categories = ["asynchronous", "concurrency", "web-programming"]

[dependencies]
arc-swap = "1.7.1"
futures = { version = "0.3.30", default-features = false, features = ["std"] }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["rt", "sync"] }

[dev-dependencies]
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "time"] }
