[package]
name = "girlboss"
version = "0.3.0"
authors = ["Jasmine Tai <jtai@jtai.ca>"]
edition = "2021"
rust-version = "1.80.0"
description = "Simple async job manager with progress tracking"
documentation = "https://docs.rs/girlboss/latest/girlboss/"
readme = "README.md"
homepage = "https://github.com/j-tai/girlboss"
repository = "https://github.com/j-tai/girlboss"
license = "MIT"
keywords = ["job-manager", "task-manager", "tokio"]
categories = ["asynchronous", "concurrency", "web-programming"]

[dependencies]
actix-rt = { version = "2.10.0", optional = true }
arc-swap = "1.7.1"
futures = { version = "0.3.31", default-features = false, features = ["std"] }
sealed = "0.6.0"
thiserror = "1.0.69"
tokio = { version = "1.41.1", features = ["rt", "sync"], optional = true }

[dev-dependencies]
tokio = { version = "1.41.1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"], optional = false }

[features]
actix-rt = ["dep:actix-rt"]
tokio = ["dep:tokio"]
